feat: added completions api
